<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArcheryScoreLog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addScoreTextValue">Add Score</string>
    <string name="viewScoresTextValue">View Scores</string>
    <string name="title_activity_add_score">AddScoreActivity</string>
    <string name="arrowOneTextValue">Arrow 1</string>
    <string name="arrowTwoTextValue">Arrow 2</string>
    <string name="arrowThreeTextValue">Arrow 3</string>
    <string name="arrowFourTextValue">Arrow 4</string>
    <string name="arrowFiveTextValue">Arrow 5</string>
    <string name="arrowSixTextValue">Arrow 6</string>
    <string name="locationEditTextValue">Location</string>
    <string name="title_activity_view_scores">ViewScoresActivity</string>
    <string name="distanceTextValue">Distance</string>
    <string name="title_activity_view_score">ViewScoreActivity</string>
    <string name="styleTextView">Style</string>
    <string name="barebowTextValue">Barebow</string>
    <string name="sightsTextValue">Sights</string>
    <string name="noDataTextValue">You have not recorded any data. Press the + in the top right to get started.</string>
    <string name="totalTextValue">Total:</string>
    <string name="dateTimeTextValue">Date and Time</string>
    <string name="totalNumberOfArrowsTextView">Total Number of Arrows Shot</string>
    <string name="unitsEditText">Units</string>
    <string name="indoorTextValue">Indoor</string>
    <string name="outdoorTextValue">Outdoor</string>
    <string name="indoorOrOutdoorTextValue">Indoors or Outdoors</string>
    <string name="deleteScoreTextValue">Delete Score</string>
    <string-array name="units_array">
        <item>Metres</item>
        <item>Feet</item>
        <item>Yards</item>
    </string-array>




</resources>
